# KashmiriNormalizer

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/KashmiriNormalizer/: __init__.py  constants.py  normalizer.py
